Adding potential impacts